Fixed bug in app.scss: z-index needed a colon

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -151,7 +151,7 @@ body.landing .navbar {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
-  z-index. 10;
+  z-index: 10;
 }
 
 .collection-album-container .collection-overlay-content {
